crates/ty_python_semantic/resources/mdtest/snapshots/methods.md_-_Methods_-_`@classmethod`_-_`__init_subclass__`_-_Basics_(a1fb03132e42b69e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: methods.md - Methods - `@classmethod` - `__init_subclass__` - Basics
mdtest path: crates/ty_python_semantic/resources/mdtest/call/methods.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class Base:
 2 |     def __init_subclass__(cls, **kwargs):
 3 |         super().__init_subclass__(**kwargs)
 4 |         cls.custom_attribute: int = 0
 5 | 
 6 | class Derived(Base):
 7 |     pass
 8 | 
 9 | reveal_type(Derived.custom_attribute)  # revealed: int
10 | class Empty: ...
11 | 
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
14 | 
15 | class NoArg:
16 |     def __init_subclass__(cls): ...
17 | 
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
21 | class Valid(RequiresArg, arg=1): ...
22 | 
23 | # error: [missing-argument]
24 | # error: [unknown-argument]
25 | class IncorrectArg(RequiresArg, not_arg="foo"):
26 |     a = 1
27 |     b = 2
28 |     c = 3
29 |     d = 4
30 |     e = 5
31 |     f = 6
32 |     g = 7
33 |     h = 8
34 |     i = 9
35 |     j = 10
36 | 
37 | class NotCallableInitSubclass:
38 |     __init_subclass__ = None
39 | 
40 | # TODO: this should be an error because `__init_subclass__` on the superclass is not callable
41 | class Bad(NotCallableInitSubclass):
42 |     a = 1
43 |     b = 2
44 |     c = 3
45 | class Base:
46 |     def __init_subclass__(cls, arg: int): ...
47 | 
48 | class Valid(Base, arg=5, metaclass=object): ...
49 | 
50 | # error: [invalid-argument-type]
51 | class Invalid(Base, metaclass=type, arg="foo"): ...
52 | from typing import Literal, overload
53 | 
54 | class Base:
55 |     @overload
56 |     def __init_subclass__(cls, mode: Literal["a"], arg: int) -> None: ...
57 |     @overload
58 |     def __init_subclass__(cls, mode: Literal["b"], arg: str) -> None: ...
59 |     def __init_subclass__(cls, mode: str, arg: int | str) -> None: ...
60 | 
61 | class Valid(Base, mode="a", arg=5): ...
62 | class Valid(Base, mode="b", arg="foo"): ...
63 | 
64 | # error: [no-matching-overload]
65 | class InvalidType(Base, mode="b", arg=5):
66 |     a = 1
67 |     b = 2
68 |     c = 3
69 |     d = 4
70 |     e = 5
```

# Diagnostics

```
error[missing-argument]: No argument provided for required parameter `arg` of function `__init_subclass__`
  --> src/mdtest_snippet.py:19:1
   |
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
21 | class Valid(RequiresArg, arg=1): ...
   |
info: Parameter declared here
  --> src/mdtest_snippet.py:13:32
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |                                ^^^^^^^^
14 |
15 | class NoArg:
   |

```

```
error[invalid-argument-type]: Argument to function `__init_subclass__` is incorrect
  --> src/mdtest_snippet.py:20:32
   |
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
   |                                ^^^^^^^^^ Expected `int`, found `Literal["foo"]`
21 | class Valid(RequiresArg, arg=1): ...
   |
info: Function defined here
  --> src/mdtest_snippet.py:13:9
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |         ^^^^^^^^^^^^^^^^^      -------- Parameter declared here
14 |
15 | class NoArg:
   |

```

```
error[missing-argument]: No argument provided for required parameter `arg` of function `__init_subclass__`
  --> src/mdtest_snippet.py:25:1
   |
23 | # error: [missing-argument]
24 | # error: [unknown-argument]
25 | class IncorrectArg(RequiresArg, not_arg="foo"):
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
26 |     a = 1
27 |     b = 2
   |
info: Parameter declared here
  --> src/mdtest_snippet.py:13:32
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |                                ^^^^^^^^
14 |
15 | class NoArg:
   |

```

```
error[unknown-argument]: Argument `not_arg` does not match any known parameter of function `__init_subclass__`
  --> src/mdtest_snippet.py:25:33
   |
23 | # error: [missing-argument]
24 | # error: [unknown-argument]
25 | class IncorrectArg(RequiresArg, not_arg="foo"):
   |                                 ^^^^^^^^^^^^^
26 |     a = 1
27 |     b = 2
   |
info: Function signature here
  --> src/mdtest_snippet.py:13:9
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 | class NoArg:
   |

```

```
error[invalid-argument-type]: Argument to function `__init_subclass__` is incorrect
  --> src/mdtest_snippet.py:51:37
   |
50 | # error: [invalid-argument-type]
51 | class Invalid(Base, metaclass=type, arg="foo"): ...
   |                                     ^^^^^^^^^ Expected `int`, found `Literal["foo"]`
52 | from typing import Literal, overload
   |
info: Function defined here
  --> src/mdtest_snippet.py:46:9
   |
44 |     c = 3
45 | class Base:
46 |     def __init_subclass__(cls, arg: int): ...
   |         ^^^^^^^^^^^^^^^^^      -------- Parameter declared here
47 |
48 | class Valid(Base, arg=5, metaclass=object): ...
   |

```

```
error[no-matching-overload]: No overload of function `__init_subclass__` matches arguments
  --> src/mdtest_snippet.py:65:1
   |
64 | # error: [no-matching-overload]
65 | class InvalidType(Base, mode="b", arg=5):
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
66 |     a = 1
67 |     b = 2
   |
info: First overload defined here
  --> src/mdtest_snippet.py:56:9
   |
54 | class Base:
55 |     @overload
56 |     def __init_subclass__(cls, mode: Literal["a"], arg: int) -> None: ...
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
57 |     @overload
58 |     def __init_subclass__(cls, mode: Literal["b"], arg: str) -> None: ...
   |
info: Possible overloads for function `__init_subclass__`:
info:   (cls, mode: Literal["a"], arg: int) -> None
info:   (cls, mode: Literal["b"], arg: str) -> None
info: Overload implementation defined here
  --> src/mdtest_snippet.py:59:9
   |
57 |     @overload
58 |     def __init_subclass__(cls, mode: Literal["b"], arg: str) -> None: ...
59 |     def __init_subclass__(cls, mode: str, arg: int | str) -> None: ...
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
60 |
61 | class Valid(Base, mode="a", arg=5): ...
   |

```
